--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+.text_color{
+    color:#FF136F;
+}
 /* Navbar css start */
 #navbar i.start-50 {
     left: 93%!important;
@@ -7,4 +10,25 @@
 .panda-bg-info{
     background-color: #FEEAE9;
 }
+.btn-danger-buy_now{
+    background: linear-gradient(180deg, #FF589B -0.01%, #FF136F 99.99%);
+    color:#FFFFFF;
+}
 /* banner css end */
+/* Cetagoroes section start */
+.ct-1{
+    background: linear-gradient(152.07deg, #FF9C35 1.47%, #FFD019 97.17%); 
+    color:#FFFFFF;
+}
+.ct-2{
+    background: linear-gradient(180deg, #FF589B -0.01%, #FF136F 99.99%);
+    color:#FFFFFF;
+}
+.ct-3{
+    background: linear-gradient(170.41deg, #4289FF -10.89%, #3F07F8 92.77%); 
+    color:#FFFFFF;
+}
+.categories img{
+    width:100px;
+}
+/* Cetagoroes section End*/
